refactor(balance-command): streamline save flow with factory and validation
Refactors the balance-save command to improve structure and add robust validation.

-   Moved ComponentFlow creation logic for balance saving into FlowFactory.
-   Introduced BalanceSaveFlowParam to encapsulate and manage flow parameters.
-   Integrated ValidatorUtil for BalanceSaveDto validation, providing immediate feedback.
-   Enhanced user experience with shellHelper.success, warning, and error messages for save operations, cancellations, and validation failures.
-   Added a check for required sources and categories before initiating the save flow.
-   Updated BalanceSaveDto to be populated directly from ComponentContext and added JSR-303 validation annotations.
-   Introduced SOURCE_REQUIRED error type.